Upgraded to Spring Boot 3.3.7